feat 源码支持非流式传输及解析

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 *{
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
 }
+
 a{
   text-decoration: none;
   color: inherit;
@@ -35,8 +36,11 @@ a{
 }
 
 body{
+
   font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
   "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+  padding: 0;
+  margin: 0;
 }
 /*文本超出隐藏*/
 .fontOverflow{
